Adds sidebar pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
 </head>
 <body class="<%= body_class %>">
   <%= render "flashes" -%>
+  <%= render "header" -%>
+  <div id="page-wrapper">
   <%= yield %>
+  </div>
   <%= render "javascript" %>
   <%= render "css_overrides" %>
 </body>
