--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
   <%= stylesheet_link_tag :application, media: "all" %>
   <%= csrf_meta_tags %>
 </head>
-<body class="<%= body_class %>">
-  <%= render "flashes" -%>
-  <%= render "header" -%>
+<body class="homepage">
+  <%= render "flashes" %>
   <div id="page-wrapper">
-  <%= yield %>
+    <%= render "header" %>
+    <%= yield %>
+    <%= render "footer" %>
   </div>
   <%= render "javascript" %>
   <%= render "css_overrides" %>
